<resources>
    <string name="app_name">Fixezi</string>
    <string name="facebook_app_id">451958879334871</string>
    <string name="fb_login_protocol_scheme">fb451958879334871</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="edittext_hint"><font size="15">Hint here!</font></string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="selected_location">Access current location to show sky
        state at this and access
        stargazing rating for this region </string>
    <string name="places_api_key">AIzaSyDQhXBxYiOPm-aGspwuKueT3CfBOIY3SJs</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark_time">Use dark theme</string>
    <string name="mode_dark_date">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate_time">Vibrate on touch</string>
    <string name="vibrate_date">Vibrate on touch</string>
    <string name="dismiss_time">Dismiss on pause (eg: orientation change)</string>
    <string name="dismiss_date">Dismiss on pause (eg: orientation change)</string>
    <string name="title_time">Show a title</string>
    <string name="title_date">Show a title</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <string name="invoicesfolder">Invoices \n Folder</string>
    <string name="btn_capture">Click</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="custom_title">Custom Title</string>
    <string name="permission_denied">YOU DENIED PERMISSION CANNOT SELECT IMAGE</string>
    <string name="your_permission_denied">YOUR PERMISSION DENIED</string>
    <string name="text_remove_account">You can stay listed on our app for as long as you want, there is no subscription and it doesn’t cost your company a cent unless you ‘accept’ a job.\nBut if you have to go, the team at Fixezi has appreciated your loyalty and we are sorry to see you go, please feel free to re-join anytime.</string>
    <string name="fontregular">DroidSerif.ttf</string>
    <string name="fontmedium">OpenSans-Regular.ttf</string>
    <string name="camera_not_found">No camera harware found</string>
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>
    <string name="whatyouthink">Here at Fixezi we aim to give our users the simplest and most user friendly app we could think of. \nSo if you are experiencing any problems or have any suggestions, we would love to hear from you.</string>
    <string name="useanyoflink">use any of these networks below\n to link to your friends</string>
    <string name="info_link">More open source from Pixplicity:\nhttp://github.com/Pixplicity</string>
    <string name="page_number_1d">Page #%d</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="permission_required">Permission Required</string>
    <string name="title1">Construction</string>
    <string name="title2">Tools</string>
    <string name="title3">Electrician</string>
    <string name="title4">Plumber</string>
    <string name="term_desc">This app requires the use of your current location,camera and your
    personal details to be stored in app and will not be displayed unless requested by Fixezi - The App Of All Trades\n\nWe are not liable for any damages, theft, fire, flooding, lack of safety that may harm you or
       others, we also are not responsible for quality of workmanship efficiency or price.\n\nAll tradesman must insure his/her contractor license number is displayed in the uploaded services they provide if applicable.Failure to do so will envolve instant dismisal from Fixezi
        \nTo check to see if you need to add a contractor license to your advertisment
    </string>
    <string name="term_desc1">These terms and conditions apply to the user/tradesman</string>
    <string name="term_txt">These terms and conditions apply to the user/tradesman</string>
    <string name="term_desc2">All Tradesman are not allowed to add any pricing in regards to the services they provide\nIn regards to 24 emergency call out, when tradesmen receive a job from any user, the tradesmen will have to call that user to inform them how much the charge for the emergency service will be.</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_location">This is all the locations you offer your mobile trade services, When a user search for your trades, your company will show in their search results if they live within the radius you selected.</string>
    <string name="Subscripition">We want to be a fair trade advertising application for both User and Tradesman combined, Providing up-to-date feedback on Tradesman to make it easier for general house owners and business owners to select tradesman.\n\nThe benefits are spread between users and tradesman listed because of the rating system we have in place, this makes it fair for all tradesman listed.\n\nAlso the user can set a rating and it will allow the the next user to have a much more informed decision of which tradesman to choose.\n\nThe Tradesman will have full control of what jobs are accepted, rejected or cancelled, and be able to view job cards from every user who books a job with your company.\n\nPayment categories are split into 4 sections, trade/categories determine the amount of viewing you get from users and work you receive i.e you only work in one trade and you only work residential you will only pay $30 per month.</string>
    <string name="Subscripition2">We want to be a fair trade advertising application for both User and Tradesman combined, Providing up-to-date feedback on Tradesman to make it easier for general house owners and business owners to select tradesman.\n\nThe benefits are spread between users and tradesman listed because of the rating system we have in place, this makes it fair for all tradesman listed.\n\nAlso the user can set a rating and it will allow the the next user to have a much more informed decision of which tradesman to choose.\n\nThe Tradesman will have full control of what jobs are accepted, rejected or cancelled, and be able to view job cards from every user who books a job with your company.</string>
    <string name="TwentyFourHour">24 Hr Emergency Callouts apply After Hours, In Weekends and on Public Holidays. If you have chosen an emergency callout hour the Tradesman will call you to inform you of the CALLOUT FEE.</string>
    <string name="SubscriptionStr">Thanks for subscribing with us we will do everything we can to give you more work, but we can\'t do everything, you need to make sure you post a clear and well uploaded image for your company heading and services this is crucial to getting more jobs.\nAlso you will be rated on your performances as a qualified tradesman and this rating is seen by all users using this application, so good luck and we hope that will continue to use us in the years to come.</string>
    <string name="PayPerJobStr">Thanks for paying per job we will do everything we can to give you more work, but we can\'t do everything, you need to make sure you post a clear and well uploaded image for your company heading and services this is crucial to getting more jobs.\nAlso you will be rated on your performances as a qualified tradesman and this rating is seen by all users using this application, so good luck and we hope that will continue to use us in the years to come.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="okk">ok</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tradmeninstruction">\n\nThats about it, If you have any problems please comment in "' What do you think of Fixezi'" in your profile menu.</string>
    <string name="tradmeninstruction1">Any information or images uploaded in "'Tradesmen sign up'"can be edited in the tradesman "'Company Profile'"</string>
    <string name="tvSplashBottom">100% Certified Tradesmen</string>
    <string name="tradmeninstruction4">User will have the ability to rate your company.</string>
    <string name="tradmeninstruction5">You can also rate the user..</string>
    <string name="tradmeninstruction6">Do try and answer all job notifications as quick as you can please.</string>
    <string name="tradmeninstruction7">All payments will be made via the "'Stripe'" credit card payment system and is very secure.</string>
    <string name="tradmeninstruction2">You can control everything from the tradesmen admin screen "'Admin dashboard'</string>
    <string name="tradmeninstruction3">You can put your company account on hold or make it Active whenever you like, this will be visible to the user</string>
    <string name="title_activity_select__radius">Map</string>
    <string name="title_activity_maps_circle_seek">MapsCircleSeek</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_multiple_image_update">MultipleImageUpdate</string>
    <string name="set_time">Set Time</string>
    <string name="cancelled_jobs_can_t_be_opened_do_you_want_to_delete_this_job">Cancelled jobs can\'t be opened.\nDo you want to delete this job?</string>
    <string name="select_time">Select Time</string>
    <string name="you_dont_have_a_payment_plan_to_see_the_user_details_please_accept_and_choose_payment_plan">You dont have a payment plan.To see the user details please accept and choose payment plan</string>
    <string name="landlord">Landlord</string>
    <string name="real_estate_agent">Real Estate agent</string>
    <string name="family_member">Family member</string>
    <string name="friend">Friend</string>
    <string name="tradesman">Tradesman</string>
    <string name="contractor">Contractor</string>
    <string name="i_am_the_owner">I am the owner</string>
    <string name="the_client_will_receive_any_invoice_receipt_note_once_job_is_completed"><![CDATA[The client will receive any invoice/receipt & note once job is completed]]></string>
    <string name="type_your_note_here">Type your note here</string>
    <string name="create_additional_qoute">Create additional qoute?</string>
    <string name="mark_job_as_complete">Mark job as Complete?</string>
</resources>