<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/ToolbarManageWorker"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/tvTittleInvoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@color/black"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/yellow_black_outline"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/the_client_will_receive_any_invoice_receipt_note_once_job_is_completed"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvJobId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:text="Job Id"
            android:textColor="@color/red"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/gray_outline_back"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2" />

                <ImageView
                    android:id="@+id/addPhoto"
                    android:layout_width="@dimen/_85sdp"
                    android:layout_height="@dimen/_85sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/click_here_img" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:gravity="center"
            android:text="AND"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tvNotes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/gray_outline_back"
            android:gravity="top|left"
            android:hint="@string/type_your_note_here"
            android:inputType="textVisiblePassword|textMultiLine"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/btJobMarked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/purpal"
            android:gravity="center"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/create_additional_qoute"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/markJobAsComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/blue_light"
            android:gravity="center"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/mark_job_as_complete"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>